--- a/switch.cfg
+++ b/switch.cfg
@@ -1,9 +1,7 @@
 module.exports = {
   urlProject:'http://localhost/LIGA_New_v8_Proxy/',
-  rootPath :'H:\\Projects\\LIGA_New_v8\\SportDBClient.WebUI\\',
-  rootFolderImages: 'H:\\Projects\\LIGA_New_v8\\SportDBClient.WebUI\\',
+  rootPath :'H:\\Projects\\LIGA_New_v8_Proxy\\SportDBClient.WebUI\\',
+  rootFolderImages: 'H:\\Projects\\LIGA_New_v8_Proxy\\SportDBClient.WebUI\\',
   copyPath: 'C:\\Users\\phillip\\Desktop\\Deployer\\',
   dpPath:'C:\\Users\\phillip\\Desktop\\Deployer\\Liga_New',
-  syncImagePath:'H:\\Projects\\LIGA_New_v8\\SportDBClient.WebUI\\',
-  syncImagePathNet:'\\\\phillip\\SyncImages\\Images',
 }
