fix command "node c n 365ACE" ( name wl contains number at 1st)

--- a/switch.cfg
+++ b/switch.cfg
@@ -1,7 +1,7 @@
 module.exports = {
-  urlProject:'http://localhost/LIGA_New_v8_Proxy/',
-  rootPath :'H:\\Projects\\LIGA_New_v8_Proxy\\SportDBClient.WebUI\\',
-  rootFolderImages: 'H:\\Projects\\LIGA_New_v8_Proxy\\SportDBClient.WebUI\\',
+  urlProject:'http://localhost/LIGA_New_v8/',
+  rootPath :'H:\\Projects\\LIGA_New_v8\\SportDBClient.WebUI\\',
+  rootFolderImages: 'H:\\Projects\\LIGA_New_v8\\SportDBClient.WebUI\\',
   copyPath: 'C:\\Users\\phillip\\Desktop\\Deployer\\',
   dpPath:'C:\\Users\\phillip\\Desktop\\Deployer\\Liga_New',
 }
