--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "cli-color": "^1.4.0",
+    "cloudscraper": "^4.6.0",
     "fs-extra": "^4.0.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "rimraf": "^2.6.1",
     "shelljs": "^0.8.2",
-    "uglify-es": "^3.3.9",
-    "uglify-js": "^3.4.0"
+    "winattr":"",
+    "cli-progress": "^3.8.0",
+    "commander": "^5.1.0"
   },
   "devDependencies": {
-    "babel-minify": "^0.5.0"
+    "babel-minify": "^0.5.0",
+    "uglify-es": "^3.3.9",
+    "uglify-js": "^3.4.0"
   }
 }
